--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,34 @@ body {
 .row, .parrafo {
   font-size: 1.10em;
 }
+.overlay {
+  position: absolute;
+  top: 0;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.37);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.grayscale {
+  filter: grayscale(100%);
+}
+.galeria {
+  display: flex;
+  width: 900px;
+  height: 530px;
+  padding-bottom: 50px;
+}
+.galeria img {
+  width: 0;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: .8;
+  transition: .5s ease;
+}
+.galeria img:hover {
+  cursor: crosshair;
+  width: 400px;
+  opacity: 1;
+  filter: contrast(120%);
+}
